The overrideMimeType in XMLHttpRequest should throw the exception. https://bugs.webkit.org/show_bug.cgi?id=136699

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-09-11
Reviewed by Darin Adler.

Source/WebCore:

No new tests, modifed test http/tests/xmlhttprequest/exceptions.html.

Set XMLHttpRequest::overrideMimeType to throw an "InvalidStateError" exception, if the state is LOADING or DONE.

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::overrideMimeType):
* xml/XMLHttpRequest.h:
* xml/XMLHttpRequest.idl:

LayoutTests:

Added test to check for "InvalidStateError" exception for overrideMimeType.

* http/tests/xmlhttprequest/exceptions-expected.txt:
* http/tests/xmlhttprequest/exceptions.html:

Canonical link: https://commits.webkit.org/154590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173552 268f45cc-cd09-0410-ab3c-d52691b4dbfc